# backup

./: CMakeLists.txt  README.md  backup  restore
src/: CMakeLists.txt
src/backup/: CMakeLists.txt  main.cpp
src/backup/core/: CMakeLists.txt  do_backup.cpp  do_backup.hpp  get_help_message.hpp  run_my_backup.cpp  run_my_backup.hpp
src/parsing/: CMakeLists.txt  parse_command_line.cpp  parse_command_line.hpp
src/restore/: CMakeLists.txt  main.cpp
src/restore/core/: CMakeLists.txt  do_restore.cpp  do_restore.hpp  get_help_message.hpp  run_my_restore.cpp  run_my_restore.hpp
src/utils/: CMakeLists.txt  backup_type.cpp  backup_type.hpp  canonize.cpp  canonize.hpp  get_current_time.cpp  get_current_time.hpp
